Give up on fixing firefox urlbar misalignment

--- a/firefox/chrome/userChrome.css
+++ b/firefox/chrome/userChrome.css
@@ -27,10 +27,8 @@
   }
 }
 
-/* Vertically center urlbar in one-line mode */
+/* Remove navigation bar color */
 #nav-bar {
-  display: flex !important;
-  align-items: center !important;
   background: none !important;
 }
 
